--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
 <body>
     @if (ViewData["showTitle"] == null || string.IsNullOrEmpty(ViewData["showTitle"].ToString())) {
         <header>
-            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dark border-bottom box-shadow mb-3 lh-sm p-1 shadow">
+            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dark border-bottom box-shadow lh-sm p-1 shadow">
                 <div class="container-fluid bg-transparent">
                     <a class="navbar-brand text-decoration-none text-white" href="#Index">RubyMine</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -51,7 +51,7 @@
                                                 <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Equals("/")" asp-area="" asp-page="/Index" title="">个人工作台</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Contains("Products")" asp-area="" asp-page="/Products/Index">所有产品</a>
+                                                <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Contains("Products")" asp-area="" asp-page="/Products/Index">项目列表</a>
                                             </li>
                                             <li class="nav-item">
                                                 <a class="nav-link text-decoration-none text-white fs-7 menu-@requestPath.Contains("Requirements")" asp-area="" asp-page="/Requirements/Index">需求跟踪</a>
@@ -99,7 +99,7 @@
                 </div>
             </nav>
         </header>}
-    <div class="container-fluid">
+    <div class="container-fluid p-2">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
